# keeper-desktop

./: .gitignore  CLAUDE.md  README.md  mise.toml
apps/desktop/src-tauri/: Cargo.toml  tauri.bundle.conf.json5  tauri.conf.json  tauri.conf.json5
apps/desktop/src-tauri/capabilities/: default.json  default.json5
apps/desktop/src-tauri/icons/: icon.icns
sidecar/: keeper-sidecar.spec  pyproject.toml
sidecar/devtools/: localscore.py
sidecar/keeper_engine/: __init__.py  app.py  container.py  funnel.py  grouping.py  imaging.py  main.py  models.py  params.py  prescreen.py  ranking.py  scorer.py  server.py  vision.py
sidecar/keeper_engine/client/: foundation_model_client.py  scorer.py  vision_client.py
sidecar/keeper_engine/config/: __init__.py  database.py  settings.py
sidecar/keeper_engine/controller/: __init__.py  assess_controller.py  group_controller.py  health_controller.py  project_controller.py  score_controller.py  settings_controller.py  thumbnail_controller.py
sidecar/keeper_engine/converter/: __init__.py  score_converter.py
sidecar/keeper_engine/entity/: geocode_cache.py  model_module.py  photo_group.py  pk_state.py  project.py  project_photo.py
sidecar/keeper_engine/enumeration/: __init__.py  assess_phase.py  assess_status.py  biz_code.py  edit_verdict.py  group_status.py  pk_origin.py  pk_outcome.py  project_status.py  selection.py
sidecar/keeper_engine/exception/: __init__.py  errors.py
sidecar/keeper_engine/mapper/: model_module_mapper.py  photo_group_mapper.py  pk_state_mapper.py  project_photo_mapper.py
sidecar/keeper_engine/middleware/: auth.py
sidecar/keeper_engine/request/: __init__.py  assess_request.py  group_request.py  project_request.py  score_request.py  settings_request.py
sidecar/keeper_engine/response/: __init__.py  assess_response.py  common.py  group_response.py  project_response.py  score_response.py  settings_response.py
sidecar/keeper_engine/service/: __init__.py  assess_service.py  funnel_service.py  grouping_service.py  params_service.py  prescreen_service.py  project_service.py  ranking_service.py  readiness_service.py  scoring_service.py  settings_service.py  workspace_service.py
sidecar/keeper_engine/util/: __init__.py  imaging.py  signals.py
sidecar/keeper_engine/vo/: __init__.py  group.py  local_score.py  pk.py  score.py  vision_model.py
sidecar/tests/: test_assess_service.py  test_assess_status.py  test_auth_cors.py  test_auth_middleware.py  test_database_migration.py  test_edit_verdict.py  test_foundation_model_client.py  test_funnel.py  test_grouping.py  test_imaging.py  test_model_module_mapper.py  test_params.py  test_pk_service.py  test_prescreen.py  test_progress_tracker.py  test_project_service.py  test_ranking.py  test_readiness.py  test_scorer.py  test_server.py  test_settings.py  test_settings_service.py  test_signals.py  test_thumbnail.py
(+49 files in other folders)
