[project]
name = "keeper-engine"
version = "0.1.0"
description = "Keeper（留影）本地推理服务：分组 / 硬废片 / 组内排序 / 大模型打分"
readme = "../README.md"
requires-python = ">=3.11,<3.14"   # 上界对齐 PyTorch wheel 生态

dependencies = [
    # ── 本地服务（被 Tauri 壳经 localhost 调用）──
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    # ── 基础图像 ──
    "Pillow>=10.0",
    "pillow-heif>=0.16",
    "imagehash>=4.3",
    "numpy>=1.26",
    "scipy>=1.11",
    # 显著性区算法用 contrib 版（含 cv2.saliency）；见下方 tool.uv.override-dependencies
    "opencv-contrib-python>=4.9",
    # RAW 解码：提取内嵌 JPEG 预览图
    "rawpy>=0.18",
    "piexif>=1.1.3",
    # ── 视觉语义特征（DINOv2）+ 美学评分 ──
    "torch>=2.2",
    "torchvision>=0.17",
    "transformers>=4.40",
    # ── 人脸检测 + ArcFace 嵌入（InsightFace）──
    "insightface>=0.7",
    "onnxruntime>=1.16 ; sys_platform != 'win32'",
    "onnxruntime-gpu[cuda,cudnn]>=1.16 ; sys_platform == 'win32'",
    # ── 互补美学 / 质量评分（MUSIQ + CLIP-IQA+）──
    "pyiqa>=0.1.10",
    "timm>=0.9",
    # ── 大模型打分（火山 Ark，OpenAI 兼容协议）；经 Scorer 接口封装 ──
    "openai>=1.40",
    # ── 依赖注入容器（分层架构：controller/service/client 经 DI 装配）──
    "dependency-injector>=4.41",
]

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.4"]

# ── uv 配置 ───────────────────────────────────────────────────────────────
# OpenCV 三包冲突的根治：insightface / pyiqa 会把 opencv-python(-headless)
# 当传递依赖拉进来，与我们要的 opencv-contrib-python 共存会覆盖 cv2.saliency。
# 用「marker 永假」的 override 把这两个传递依赖从依赖树里彻底剔除——解析阶段就消失。
[tool.uv]
override-dependencies = [
    "opencv-python ; sys_platform == 'never'",
    "opencv-python-headless ; sys_platform == 'never'",
]

[tool.ruff]
line-length = 100
